[package]
name = "lunar-lander-tch"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "webgl2",
    "x11",
    "tonemapping_luts",
] }
bevy_egui = "0.30.0"
egui_plot = "0.29.0"
rand = "0.8.5"
tch = { version = "0.18.0", features = ["download-libtorch"] }
bevy_rapier2d = { version = "0.27.0", features = ["simd-stable"] }
earcut = "0.4.2"
